Static site (2015-02-24 shi)
==============================
Changed layout for columns of Publishers / IDs
Rearranged dropdown search menu
Updated translations


Static site (2015-02-02 shi)
==============================
Added shortcut to Q


Static site (2015-01-05 shi)
==============================
Edited feedback css and info


Static site (2014-11-30 shi)
==============================
New post - Generator examples
Edit front page description


Static site (2014-11-28 shi)
==============================
New post - Generator
Fixed max-width for images in news posts


Static site (2014-11-14 shi)
==============================
Added Beta alert and temp style changes


Static site (2014-11-12 shi)
==============================
Edit text on index page
Added footer notes for attribution and explanation
Translations for new text


Static site (2014-10-30 shi)
==============================
Main links are now more prominent
Flag alt text fixed
Hover colours for about links
Fixed links for about page


Static site (2014-10-29 shi)
==============================
Added link to view all publishers
Added link to view all countries


Static site (2014-10-08 shi)
==============================
Redesign index page to include both countries and publishers
Fixed new content for all translations
Replaced Development Portal with d-portal
Added selector dropdown menu for both countries and publishers
Translations for selector text


Static site (2014-09-19 shi)
==============================
Fixed new URL for Nepal portal
Added Generator link to replace Install link
Edited reminder style


Static site (2014-09-09 shi)
==============================
Fixed url for widget in About page


Static site (2014-08-28 shi)
==============================
Edited About page to include new generator section
Added translations
Added Pixabay attribution
Fixed Generator link


Static site (2014-08-11 shi)
==============================
Added attribution and links to data sources in about page