@@ -39,7 +39,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="description_wrap">
+				<div class="description_wrap a">
 					<div class="description">
 						<span class="title">{index_title_text}</span>
 						<p><span class="bold">d-portal.org</span> {index_paragraph1_text}</p>
@@ -52,8 +52,8 @@
 						<p><b>{explore_paragraph1_text}</b></p><p>{explore_paragraph2_text}</p>
 					</div>
 				</div>
+				<span id="explore"></span>
 				<div class="country_menu_wrap">
-					<span id="explore"></span>
 					<div class="compare_wrap">
 						<a class="path" href="{root}ctrack.html?tongue={tongue}#view=publisher_countries">
 							<span class="select_wrap full">{all_countries_text}</span>
