@@ -3,6 +3,7 @@ Static site (2015-02-24 shi)
 Changed layout for columns of Publishers / IDs
 Rearranged dropdown search menu
 Updated translations
+Moved explore tab link
 
 
 Static site (2015-02-02 shi)
